fix loader z-index

--- a/src/directives/loader/loader.scss
+++ b/src/directives/loader/loader.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 999;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
